New Topics seed.  Manage Topics.  Manage Comment Topic Filter

--- a/config/lib/configs.json
+++ b/config/lib/configs.json
@@ -505,8 +505,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Geology, Landforms and Soils",
-      "name": "Geology, Landforms and Soils",
+      "description": "Terrestrial/Ecosystems: Geology, Landforms and Soils",
+      "name": "Terrestrial/Ecosystems: Geology, Landforms and Soils",
       "code": "geology-landforms-and-soils",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -522,8 +522,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Surface Water Quality",
-      "name": "Surface Water Quality",
+      "description": "Water: Surface Water Quality",
+      "name": "Water: Surface Water Quality",
       "code": "surface-water-quality",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -539,8 +539,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Surface Water Quantity",
-      "name": "Surface Water Quantity",
+      "description": "Water: Surface Water Quantity",
+      "name": "Water: Surface Water Quantity",
       "code": "surface-water-quantity",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -556,9 +556,26 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Groundwater Quality",
-      "name": "Groundwater Quality",
+      "description": "Water: Groundwater Quality",
+      "name": "Water: Groundwater Quality",
       "code": "groundwater-quality",
+      "group": "Environment",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Water: Groundwater Quantity",
+      "name": "Water: Groundwater Quantity",
+      "code": "groundwater-quantity",
       "group": "Environment",
       "visibleAtPhase": null,
       "stream": null,
@@ -590,8 +607,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Rare Plants",
-      "name": "Rare Plants",
+      "description": "Terrestrial/Ecosystems: Rare Plants",
+      "name": "Terrestrial/Ecosystems: Rare Plants",
       "code": "rare-plants",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -607,8 +624,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Rare and Sensitive Ecological Communities",
-      "name": "Rare and Sensitive Ecological Communities",
+      "description": "Terrestrial/Ecosystems: Rare and Sensitive Ecological Communities",
+      "name": "Terrestrial/Ecosystems: Rare and Sensitive Ecological Communities",
       "code": "rare-and-sensitive-ecological-communities",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -624,8 +641,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Grasslands",
-      "name": "Grasslands",
+      "description": "Terrestrial/Ecosystems: Grasslands",
+      "name": "Terrestrial/Ecosystems: Grasslands",
       "code": "grasslands",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -641,8 +658,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Terrestrial Invertebrates",
-      "name": "Terrestrial Invertebrates",
+      "description": "Wildlife: Terrestrial Invertebrates",
+      "name": "Wildlife: Terrestrial Invertebrates",
       "code": "terrestrial-invertebrates",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -658,8 +675,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Amphibians",
-      "name": "Amphibians",
+      "description": "Wildlife: Amphibians",
+      "name": "Wildlife: Amphibians",
       "code": "amphibians",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -675,8 +692,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Reptiles",
-      "name": "Reptiles",
+      "description": "Wildlife: Reptiles",
+      "name": "Wildlife: Reptiles",
       "code": "reptiles",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -692,8 +709,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Migratory Birds",
-      "name": "Migratory Birds",
+      "description": "Wildlife: Migratory Birds",
+      "name": "Wildlife: Migratory Birds",
       "code": "migratory-birds",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -709,8 +726,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Raptors",
-      "name": "Raptors",
+      "description": "Wildlife: Raptors",
+      "name": "Wildlife: Raptors",
       "code": "raptors",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -726,8 +743,8 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Non-migratory Gamebirds",
-      "name": "Non-migratory Gamebirds",
+      "description": "Wildlife: Non-migratory Gamebirds",
+      "name": "Wildlife: Non-migratory Gamebirds",
       "code": "non-migratory-gamebirds",
       "group": "Environment",
       "visibleAtPhase": null,
@@ -964,40 +981,6 @@
       "status": "Not Started",
       "progress": 0,
       "isValueComponent": true,
-      "description": "Archaeological Sites",
-      "name": "Archaeological Sites",
-      "code": "archaeological-sites",
-      "group": "Heritage",
-      "visibleAtPhase": null,
-      "stream": null,
-      "project": null
-    },
-    {
-      "access": {
-        "watch": "",
-        "write": "",
-        "read": "user"
-      },
-      "status": "Not Started",
-      "progress": 0,
-      "isValueComponent": true,
-      "description": "Aboriginal and Non-Aboriginal Heritage Sites",
-      "name": "Aboriginal and Non-Aboriginal Heritage Sites",
-      "code": "aboriginal-and-non-aboriginal-heritage-sites",
-      "group": "Heritage",
-      "visibleAtPhase": null,
-      "stream": null,
-      "project": null
-    },
-    {
-      "access": {
-        "watch": "",
-        "write": "",
-        "read": "user"
-      },
-      "status": "Not Started",
-      "progress": 0,
-      "isValueComponent": true,
       "description": "Air Quality",
       "name": "Air Quality",
       "code": "air-quality",
@@ -1104,6 +1087,227 @@
       "name": "Community Health and Well-being",
       "code": "community-health-and-well-being",
       "group": "Health",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Heritage",
+      "name": "Heritage",
+      "code": "heritage",
+      "group": "Heritage",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Jacko Lake and Peterson Creek",
+      "name": "Jacko Lake and Peterson Creek",
+      "code": "jacko-lake-and-peterson-creek",
+      "group": "Jacko Lake and Peterson Creek",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Rights and Title",
+      "name": "Rights and Title",
+      "code": "rights-and-title",
+      "group": "Aboriginal Information",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Other Interests",
+      "name": "Other Interests",
+      "code": "other-interests",
+      "group": "Aboriginal Information",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Consultation",
+      "name": "Consultation",
+      "code": "consultation",
+      "group": "Aboriginal Information",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Regulatory Process",
+      "name": "Regulatory Process",
+      "code": "regulatory-process",
+      "group": "Assessment Process",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Assessment Methods",
+      "name": "Assessment Methods",
+      "code": "assessment-methods",
+      "group": "Assessment Process",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Project Design",
+      "name": "Project Design",
+      "code": "project-design",
+      "group": "Project Planning",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Project Alternatives",
+      "name": "Project Alternatives",
+      "code": "project-alternatives",
+      "group": "Project Planning",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Project Benefits",
+      "name": "Project Benefits",
+      "code": "project-benefits",
+      "group": "Project Planning",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    }, 
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Management Plans",
+      "name": "Management Plans",
+      "code": "management-plans",
+      "group": "Project Planning",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Accidents and Malfunctions",
+      "name": "Accidents and Malfunctions",
+      "code": "accidents-and-malfunctions",
+      "group": "Project Planning",
+      "visibleAtPhase": null,
+      "stream": null,
+      "project": null
+    },
+    {
+      "access": {
+        "watch": "",
+        "write": "",
+        "read": "user"
+      },
+      "status": "Not Started",
+      "progress": 0,
+      "isValueComponent": true,
+      "description": "Other",
+      "name": "Other",
+      "code": "other",
+      "group": "Other",
       "visibleAtPhase": null,
       "stream": null,
       "project": null
@@ -1596,16 +1800,16 @@
         "read": "user"
       },
       "prerequisites": [],
-      "processCode": "manage-value-components",
+      "processCode": "manage-topics",
       "subStatuses": "",
       "subStatus": "",
       "notRequiredReason": "",
       "dateCompleted": null,
       "dateStarted": null,
       "status": "Not Started",
-      "description": "Manage Value Components",
-      "name": "Manage Value Components",
-      "code": "manage-value-components",
+      "description": "Manage Topics",
+      "name": "Manage Topics",
+      "code": "manage-topics",
       "stream": null,
       "project": null,
       "phase": null,
