Add Stream to config Region Code / Desc filter added.

--- a/config/lib/configs.json
+++ b/config/lib/configs.json
@@ -1838,5 +1838,12 @@
       "activity": null
     }        
   ],
-  "bucketrequirements": []
+  "bucketrequirements": [],
+  "streams":[
+    {
+      "description" : "Ajax Comments",
+      "name" : "Ajax Comments",
+      "code" : "ajax-comments"
+    }
+  ]
 }
