--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "grunt-mocha-istanbul": "^2.4.0",
     "grunt-mocha-test": "~0.12.7",
     "grunt-ng-annotate": "^1.0.1",
-    "grunt-node-inspector": "~0.2.0",
+    "grunt-node-inspector": ">=0.2.0",
     "grunt-nodemon": "~0.4.0",
     "grunt-protractor-runner": "^2.0.0",
     "gulp": "^3.9.0",
