--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "ngmap": "~1.13.4",
     "angular-bootstrap-datetimepicker": "latest",
     "angular-bootstrap-confirm": "~0.7.0",
-    "angular-toastr": "~1.6.0"
+    "angular-toastr": "~1.6.0",
+    "angular-scroll": "~1.0.0"
   },
   "resolutions": {
     "angular": "~1.3"
