--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "socket.io": "^1.3.5",
     "spooky": "~0.2.5",
     "swig": "^1.4.2",
+    "tiny-jsonrpc": "~0.2.1",
     "validator": "^3.41.2"
   },
   "devDependencies": {
