--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-bootstrap": "~0.13",
     "angular-ui-utils": "bower",
     "angular-ui-router": "~0.2",
+    "angular-ui-tinymce": "latest",
     "angular-file-upload": "1.1.5",
     "angular-messages": "1.3.17",
     "angular-moment": "~0.10.3",
