--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-bootstrap-datetimepicker": "latest",
     "angular-bootstrap-confirm": "~0.7.0",
     "angular-toastr": "~1.6.0",
-    "angular-scroll": "~1.0.0"
+    "angular-scroll": "~1.0.0",
+    "angular-cookies": "1.3.20"
   },
   "resolutions": {
     "angular": "~1.3"
