--- a/bower.json
+++ b/bower.json
@@ -26,9 +26,10 @@
     "angular-toastr": "~1.6.0",
     "angular-scroll": "~1.0.0",
     "angular-cookies": "1.3.20",
-    "ng-table": "~0.8.3"
+    "ng-table": "1.0.0-beta.9"
   },
   "resolutions": {
-    "angular": "~1.3"
+    "angular": "~1.3",
+    "ng-table": "1.0.0-beta.9"
   }
 }
