--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "consolidate": "~0.13.1",
     "cookie-parser": "^1.3.2",
     "crypto": "0.0.3",
+    "csv-parse": "1.0.2",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
     "forever": "~0.14.2",
