--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
     "phantomjs": ">=1.9.0",
-    "promise": "~3.5.3",
+    "promise": ">=3.5.3",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
     "spooky": "~0.2.5",
