--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "passport-local": "^1.0.0",
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
-    "phantomjs": ">=1.9.0",
+    "phantomjs": "1.9.0",
     "promise": "^7.1.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
