--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,11 @@ web:
   environment:
   - VIRTUAL_PORT=${ESM_HOST_PORT}
   - VIRTUAL_HOST=${ESM_VIRTUAL_HOST}
+  - SEED_MEM=${SEED_MEM}
 
 db:
   image: mongo
   volumes:
   - /data/${ESM_ENVIRONMENT_NAME}/db:/data/db
+
+mongoexpress:
