- added new environment variable to docker context.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ web:
   - VIRTUAL_PORT=${ESM_HOST_PORT}
   - VIRTUAL_HOST=${ESM_VIRTUAL_HOST}
   - SEED_MEM=${SEED_MEM}
+  - MEM=${MEM}
 
 db:
   image: mongo
