--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "angular-bootstrap-confirm": "~0.7.0",
     "angular-toastr": "~1.6.0",
     "angular-scroll": "~1.0.0",
-    "angular-cookies": "1.3.20"
+    "angular-cookies": "1.3.20",
+    "es6-shim": "^0.35.0"
   },
   "resolutions": {
     "angular": "~1.3",
