--- a/bower.json
+++ b/bower.json
@@ -20,13 +20,13 @@
     "lodash": "3.10.1",
     "moment-timezone": "~0.4.0",
     "ng-file-upload": "~7.3.8",
-    "ngmap": "~1.13.4",
     "angular-bootstrap-datetimepicker": "latest",
     "angular-bootstrap-confirm": "~0.7.0",
     "angular-toastr": "~1.6.0",
     "angular-scroll": "~1.0.0",
     "angular-cookies": "1.3.20",
-    "es6-shim": "^0.35.0"
+    "es6-shim": "^0.35.0",
+    "angular-google-maps": "^2.3.2"
   },
   "resolutions": {
     "angular": "~1.3",
