--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport-local": "^1.0.0",
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
+    "passport-unique-token":"^0.1.4",
     "phantomjs": "1.9.8",
     "promise": "^7.1.1",
     "serve-favicon": "^2.3.0",
