--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-bootstrap-datetimepicker": "latest",
     "angular-bootstrap-confirm": "~0.7.0",
     "angular-toastr": "~1.6.0",
-    "es6-shim": "^0.35.0"
+    "es6-shim": "^0.35.0",
+    "js-polyfills": "~0.1.20"
   },
   "resolutions": {
     "angular": "~1.3"
