--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-scroll": "~1.0.0",
     "angular-cookies": "1.3.20",
     "es6-shim": "^0.35.0",
-    "angular-google-maps": "^2.3.2"
+    "angular-google-maps": "^2.3.2",
+    "angular-resizable": "~1.2.0"
   },
   "resolutions": {
     "angular": "~1.3",
