--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,7 +8,8 @@
     "https": "^1.0.0",
     "mongodb": "^2.1.14",
     "path": "^0.12.7",
-    "request": "^2.70.0"
+    "request": "^2.70.0",
+    "node-uuid":  "1.4.7"
   },
   "devDependencies": {},
   "scripts": {
