--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "passport-local": "^1.0.0",
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
-    "passport-unique-token":"^0.1.4",
+    "passport-unique-token": "^0.1.4",
     "phantomjs": "1.9.8",
     "promise": "^7.1.1",
     "serve-favicon": "^2.3.0",
@@ -65,6 +65,7 @@
     "spooky": "~0.2.5",
     "swig": "^1.4.2",
     "tiny-jsonrpc": "~0.2.1",
+    "uid-safe": "2.0.0",
     "validator": "^3.41.2"
   },
   "devDependencies": {
