--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "passport-paypal-openidconnect": "^0.1.1",
     "passport-twitter": "^1.0.2",
     "passport-unique-token": "^0.1.4",
-    "phantomjs": "1.9.8",
+    "phantomjs-prebuilt": "2.1",
     "promise": "^7.1.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
