--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "passport-unique-token": "^0.1.4",
     "phantomjs-prebuilt": "2.1",
     "promise": "^7.1.1",
+    "rss": "^1.2.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5",
     "spooky": "~0.2.5",
