--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "bower install --config.interactive=false --allow-root && grunt buildprod"
+    "postinstall": "git config --global url.'https://'.insteadOf git:// && bower install --config.interactive=false --allow-root && grunt buildprod"
   },
   "dependencies": {
     "acl": "~0.4.4",
