--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "sudo yum install -y ruby && gem install sass && git config --global url.'https://'.insteadOf git:// && bower install --config.interactive=false --allow-root && grunt buildprod"
+    "postinstall": "git config --global url.'https://'.insteadOf git:// && bower install --config.interactive=false --allow-root && grunt buildprod"
   },
   "dependencies": {
     "acl": "~0.4.4",
@@ -76,7 +76,6 @@
     "grunt-contrib-cssmin": "~0.12.3",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "~0.4.4",
@@ -87,6 +86,7 @@
     "grunt-node-inspector": ">=0.2.0",
     "grunt-nodemon": "~0.4.0",
     "grunt-protractor-runner": "^2.0.0",
+    "grunt-sass": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-autoprefixer": "^2.3.1",
