--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     "swig": "^1.4.2",
     "tiny-jsonrpc": "~0.2.1",
     "uid-safe": "2.0.0",
-    "validator": "^3.41.2"
+    "validator": "^3.41.2",
+	"mongodb": "~2.0",
+	"mongodb-core": "~1.0"
+
   },
   "devDependencies": {
     "coveralls": "^2.11.4",
