- updating for compatibility with OpenShift and new sass processor.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "npm": ">=1.4.28"
   },
   "scripts": {
-    "start": "grunt",
     "test": "grunt test",
-    "postinstall": "bower install --config.interactive=false --allow-root"
+    "postinstall": "git config --global url.'https://'.insteadOf git:// && bower install --config.interactive=false --allow-root && grunt buildprod"
   },
   "dependencies": {
     "acl": "~0.4.4",
@@ -75,7 +74,6 @@
     "grunt-contrib-cssmin": "~0.12.3",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "~0.4.4",
@@ -86,25 +84,7 @@
     "grunt-node-inspector": ">=0.2.0",
     "grunt-nodemon": "~0.4.0",
     "grunt-protractor-runner": "^2.0.0",
-    "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-csslint": "~0.1.5",
-    "gulp-cssmin": "~0.1.7",
-    "gulp-jshint": "^1.11.2",
-    "gulp-karma": "~0.0.4",
-    "gulp-less": "^3.0.3",
-    "gulp-livereload": "^3.8.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-mocha": "^2.1.2",
-    "gulp-ng-annotate": "^1.0.0",
-    "gulp-nodemon": "^2.0.3",
-    "gulp-protractor": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.3",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.6",
+    "grunt-sass": "^1.2.0",
     "karma": "~0.12.37",
     "karma-chrome-launcher": "~0.2.0",
     "karma-coverage": "~0.4.2",
