--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "^4.0.0",
     "method-override": "^2.3.3",
     "mocha": "~1.20.0",
-    "mongoose": "^4.0.6",
+    "mongoose": "4.6.6",
     "morgan": "^1.6.1",
     "multer": "0.1.8",
     "node-pre-gyp": "0.6.4",
