--- a/bower.json
+++ b/bower.json
@@ -4,32 +4,34 @@
   "description": "EAO Project Space",
   "dependencies": {
     "bootstrap": "~3",
-    "angular": "~1.3",
-    "angular-resource": "~1.3",
-    "angular-animate": "~1.3",
-    "angular-mocks": "~1.3",
+    "angular": "latest",
+    "angular-resource": "~1.5",
+    "angular-animate": "~1.5",
+    "angular-mocks": "~1.5",
     "angular-bootstrap": "~0.14",
     "angular-ui-utils": "bower",
-    "angular-ui-router": "~0.2",
+    "angular-ui-router": "latest",
     "angular-ui-tinymce": "latest",
-    "angular-file-upload": "1.1.5",
-    "angular-messages": "1.3.17",
-    "angular-moment": "~0.10.3",
-    "angularD3": "~0.0.29",
+    "angular-file-upload": "^2.4.0",
+    "angular-messages": "~1.5",
+    "angular-moment": "latest",
+    "angularD3": "latest",
     "bootstrap-sass": "~3.3.4",
     "lodash": "3.10.1",
     "moment-timezone": "~0.4.0",
-    "ng-file-upload": "~7.3.8",
+    "ng-file-upload": "^12.2.13",
     "angular-bootstrap-datetimepicker": "latest",
     "angular-bootstrap-confirm": "~0.7.0",
     "angular-scroll": "~1.0.0",
-    "angular-cookies": "1.3.20",
+    "angular-cookies": "~1.4.0",
     "es6-shim": "^0.35.0",
     "angular-google-maps": "latest",
-    "angular-resizable": "~1.2.0"
+    "angular-resizable": "latest",
+    "pdfjs-dist": "latest",
+    "ng-pdfviewer": "^0.2.1"
   },
   "resolutions": {
-    "angular": "~1.3",
+    "angular": "^1.5.9",
     "lodash": "4.5.1"
   }
 }
