--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "morgan": "^1.6.1",
     "multer": "0.1.8",
     "node-pre-gyp": "0.6.4",
+    "node-sass": "^3.13.1",
     "nodemailer": "^2.3.2",
     "passport": "~0.2.2",
     "passport-github": "~0.1.5",
